# EAGLE

./: CMakeLists.txt  LICENSE  README.md  build.sh  diagram.py  eagle.hh  eagle.proto  main.cc  master.cc  random.hh  start.sh  stop.sh  storage.cc  storage.hh  transport.hh  worker.cc
examples/: CMakeLists.txt  build.sh  cifar-10.cc  cifar-10.hh  mnist.cc  mnist.hh
examples/cifar-10/: download.sh
examples/cifar-10/include/cifar/: cifar10_reader.hpp
examples/mnist/: download.sh
src/: CMakeLists.txt  LICENSE  build.sh  diagram.py  eagle.hh  eagle.pb.cc  eagle.pb.h  mnist.eagle  start.sh  stop.sh  storage.cc  transport.hh  varint.hh
src/examples/: cifar-10.cc  mnist.cc
src/examples/mnist/: download.sh
